--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.10",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "axios": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
@@ -25,7 +26,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint:fix": "eslint src --ext ts,tsx . --fix"
+    "lint:fix": "eslint src --ext ts,tsx . --fix",
+    "deploy:kyj": "aws s3 sync ./build s3://waffle-market-03 --profile=lerrybe",
+    "deploy:bmh": "aws s3 sync ./build s3://waffle-market-03 --profile=roddywhite",
+    "deploy:ycm": "aws s3 sync ./build s3://waffle-market-03 --profile=fluentmin"
   },
   "eslintConfig": {
     "extends": [
