--- a/package.json
+++ b/package.json
@@ -59,6 +59,10 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.11",
     "husky": "^8.0.2",
+    "msw": "^0.49.2",
     "prettier": "^2.8.1"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
