--- a/package.json
+++ b/package.json
@@ -61,5 +61,6 @@
     "eslint-plugin-react": "^7.31.11",
     "husky": "^8.0.2",
     "prettier": "^2.8.1"
-  }
+  },
+  "proxy": "http://localhost:3000"
 }
