--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,8 @@ name: development deployment
 
 on:
   pull_request:
-    branches:
-      - main
-    types: [closed]
+    types:
+      - closed
 
 jobs:
   deploy:
