--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "msw": "^0.49.2",
     "prettier": "^2.8.1"
   },
-  "proxy": "http://localhost:3000",
+  "proxy": "http://3.35.168.70",
   "msw": {
     "workerDirectory": "public"
   }
