Setting: 자동배포 설정3

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: development deployment2
+name: development deployment3
 
 on:
   pull_request:
@@ -32,9 +32,12 @@ jobs:
           REACT_APP_KAKAOMAP_API_KEY: ${{ secrets.REACT_APP_KAKAOMAP_API_KEY }}
         run: yarn build
 
-      - name: S3 Deploy
-        run: aws s3 sync build/ s3://waffle-market-03 --delete
+      - name: Deploy
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: ap-northeast-1
+        run: |
+          aws s3 cp \
+            --recursive \
+            --region ap-northeast-1 \
+            build s3://waffle-market-03
