--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "axios": "^1.2.1",
     "framer-motion": "^8.0.2",
     "gapi-script": "^1.2.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-daum-postcode": "^3.1.1",
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
     "react-kakao-maps-sdk": "^1.1.5",
+    "react-moment": "^1.1.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
