Setting: 자동배포 수정 (새 버킷)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,5 +39,5 @@ jobs:
         run: |
           aws s3 cp \
             --recursive \
-            --region ap-northeast-1 \
-            build s3://waffle-market-03
+            --region ap-northeast-2 \
+            build s3://waffle-market
