--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.6",
+    "@mui/styles": "^5.11.2",
     "@reduxjs/toolkit": "^1.9.1",
     "@stomp/stompjs": "^6.1.2",
     "@testing-library/jest-dom": "^5.16.5",
@@ -22,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
     "react-kakao-maps-sdk": "^1.1.5",
+    "react-material-ui-carousel": "^3.4.2",
     "react-moment": "^1.1.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
