feat: aws key추가

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -31,6 +31,10 @@ jobs:
           REACT_APP_GOOGLE_CLIENT_ID: ${{ secrets.REACT_APP_GOOGLE_CLIENT_ID }}
           REACT_APP_GOOGLE_SECRET_KEY: ${{ secrets.REACT_APP_GOOGLE_SECRET_KEY }}
           REACT_APP_KAKAOMAP_API_KEY: ${{ secrets.REACT_APP_KAKAOMAP_API_KEY }}
+          REACT_APP_AWS_BUCKET_NAME: ${{ REACT_APP_AWS_BUCKET_NAME }}
+          REACT_APP_AWS_REGION: ${{ REACT_APP_AWS_REGION }}
+          REACT_APP_AWS_ACCESS_KEY: ${{ REACT_APP_AWS_ACCESS_KEY }}
+          REACT_APP_AWS_SECRET_KEY: ${{ REACT_APP_AWS_SECRET_KEY }}
         run: yarn build
 
       - name: Deploy
