feat: cloudfront invalidation 추가

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,3 +47,6 @@ jobs:
             --recursive \
             --region ap-northeast-2 \
             build s3://waffle-market.store
+            
+      - name: invalidation
+        run: aws cloudfront create-invalidation --distribution-id ${{secrets.CLOUDFRONT_DISTRIBUTION_ID}} --paths "/*"
