--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,5 +55,5 @@ jobs:
           AWS_EC2_METADATA_DISABLED: true
         run: |
           aws cloudfront create-invalidation \
-          --distribution-id {{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} \
+          --distribution-id ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }} \
           --paths "/*"
